# luke-and-julia-game

./: CMakeLists.txt  README.md  makefile
include/: auto_input_state.h  background.h  block.h  button.h  game.h  game_info.h  game_object.h  game_state.h  grass_block.h  input_state.h  npc.h  physics.h  player.h  sprite.h  textured_rectangle.h  texutred_rectangle.h  world.h
scripts/: run.sh
src/: auto_input_state.cpp  background.cpp  block.cpp  button.cpp  game.cpp  game_info.cpp  game_object.cpp  game_state.cpp  grass_block.cpp  input_state.cpp  main.cpp  npc.cpp  physics.cpp  player.cpp  sprite.cpp  textured_rectangle.cpp  world.cpp
src/game/: CMakeLists.txt  button.cpp  button.h  game.cpp  game.h  game_state.h  textured_rectangle.cpp  textured_rectangle.h
src/input/: CMakeLists.txt  input_state.cpp  input_state.h
src/physics/: CMakeLists.txt  physics.cpp  physics.h
src/render/: CMakeLists.txt  renderer.cpp  renderer.h
src/sprite/: CMakeLists.txt  npc.cpp  npc.h  player.cpp  player.h  sprite.cpp  sprite.h
src/world/: CMakeLists.txt  background.cpp  background.h  block.cpp  block.h  world.cpp  world.h
